--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,13 +7,28 @@
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
+                <!-- Copy CSS from https://getbootstrap.com/docs/5.0/getting-started/introduction/#css -->
+
+            
         {% endblock %}
 
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
+                <!-- Copy JavaScript from https://getbootstrap.com/docs/5.0/getting-started/introduction/#js -->
+
         {% endblock %}
+
+        <div class="btn-group" role="group" aria-label="Basic example">
+            <button type="button" class="btn btn-primary"><</button>
+            <button type="button" class="btn btn-primary"><=</button>
+            <button type="button" class="btn btn-primary">>=</button>
+            <button type="button" class="btn btn-primary">></button>
+            
+        </div>
     </head>
     <body>
         {% block body %}{% endblock %}
     </body>
 </html>
+
+
